--- a/catalog.html
+++ b/catalog.html
@@ -7,8 +7,8 @@
   <body>
     <header class='main-header'>
       <nav class='main-navigation'>
-        <a class='main-header-logo' href='index.html'><!--По ТЗ логотип на странице каталога - ссылка, ведущая на главную страницу.-->
-          <img src='img/logo.svg' width='154' height='64' alt='Логотип GllacyShop'> <!--Ширина и высота изображений задана предварительно-->
+        <a class='main-header-logo' href='index.html'>
+          <img src='img/logo.svg' width='154' height='64' alt='Логотип GllacyShop'>
         </a>
         <ul class='site-navigation'>
           <li><a href='#'>Каталог</a>
@@ -27,10 +27,10 @@
           <ul class='search-list'>
             <li>
               <span class='search'>Поиск</span>
-              <form class='seacrh-form' action='https://echo.htmlacademy.ru' method="get">
+              <form class='seacrh-form' action='https://echo.htmlacademy.ru' method='get'>
                 <ul class='search-window'>
                   <li>
-                    <input type='search' name='search' placeholder="Что ищем?">
+                    <input type='search' name='search' placeholder='Что ищем?'>
                   </li>
                 </ul>
               </form>
@@ -39,22 +39,22 @@
           <ul class='login-list'>
             <li>
               <a class='login-link' href='#'>Вход</a>
-              <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+              <form class='login-form' action='https://echo.htmlacademy.ru' method='post'>
                 <ul class='login-window'>
                   <li class='login-field'>
-                    <label class="visually-hidden" for="user-email">Электронная почта</label>
-                    <input type='email' name='email' id='user-email' placeholder="Электронная почта" required>
+                    <label class='visually-hidden' for='user-email'>Электронная почта</label>
+                    <input type='email' name='email' id='user-email' placeholder='Электронная почта' required>
                   </li>
                   <li class='login-field'>
-                    <label class="visually-hidden" for="user-password">Пароль</label>
-                    <input type='password' name='password' id='user-password' placeholder="Пароль" required>
+                    <label class='visually-hidden' for='user-password'>Пароль</label>
+                    <input type='password' name='password' id='user-password' placeholder='Пароль' required>
                   </li>
                   <li class='sign-in'>
                     <button class='button' type='submit'>Войти</button>
                   </li>
                   <li class='login-password-info'>
                     <a class='login-problem' href='#'>Забыли пароль?</a>
-                  </li> <!--Название login-problem не совсем подходит, но я хотел как то объединить эти кнопки, т.к у них одинаковое оформление-->
+                  </li>
                   <li class='login-password-info'>
                     <a class='login-problem' href='#'>Новая регистрация</a>
                   </li>
@@ -69,30 +69,24 @@
                 <li>
                   <table>
                     <tr>
-                      <td class='close'>x</td>
-                      <td><img src='img/product-01.jpg' width='33' height="33" alt='Пломбир с апельсиновым джемом'></td>
+                      <td><button type='button' class='visually-hidden delete'>x</button></td>
+                      <td><img src='img/product-01.jpg' width='33' height='33' alt='Пломбир с апельсиновым джемом'></td>
                       <td>Пломбир с апельсиновым джемом</td>
                       <td>1,5 кг х <span class='backet-price'>200 руб.</span></td>
                       <td>300 руб.</td>
                     </tr>
                     <tr>
-                      <td>x</td>
-                      <td><img src='img/product-03.jpg' width='33' height="33" alt='Клубничный пломбир с присыпкой из белого шоколада'></td>
+                      <td><button type='button' class='visually-hidden delete'>x</button></td>
+                      <td><img src='img/product-03.jpg' width='33' height='33' alt='Клубничный пломбир с присыпкой из белого шоколада'></td>
                       <td>Клубничный пломбир с присыпкой из белого шоколада</td>
                       <td>3,0 кг х <span class='backet-price'>300 руб.</span></td>
                       <td>450 руб.</td>
                     </tr>
                     <tr>
-                      <td colspan="5"><hr>Итого 750 руб.</td>
-                    </tr>
-                    <tr>
-                      <td colspan="5">
-                        <form action='#' method='get'>
-                          <button type='submit' class='button'>Оформить заказ</button>
-                        </form>
-                      </td>
+                      <td colspan='5'><hr>Итого 750 руб.</td>
                     </tr>
                   </table>
+                  <a href='#' class='button'>Оформить заказ</a>
                 </li>
               </ul>
             </li>
@@ -112,91 +106,89 @@
       <ul class='breadcrumbs'>
           <li><a href='index.html'>Главная</a> » </li>
           <li><a href='#'>Каталог</a> » </li>
-          <li><a href='catalog.html'>Сливочное</a></li>
+          <li>Сливочное</li>
       </ul>
       <h1 class='main-caption'>Сливочное мороженое</h1>
-      <div class='options'>
-        <form action='#' method='get'>
-          <fieldset>
-            <legend class='visually-hidden'>Критерии поиска</legend>
-            <p>
-              <label for='sorting'>Соритровка:</label>
-              <select class='visually-hidden' name='sorting-type' id='sorting'>
-                <option value='popularity'>по-популярности</option>
-                <option value='inexpensive-first'>сначала недорогие</option>
-                <option value='expensive-first'>сначала дорогие</option>
-                <option value='fat-content'>по жирности</option>
-              </select>
-            </p>
-            <p>
-              <label for='price'>Цена: 100 руб. - 500 руб.</label><!--Не понял, как сделать 2 ползунка.-->
-              <input class='visually-hidden' type='range' min='100' max='500' step='10' name='price' id='price'>
-            </p>
-            <span>Жирность:</span>
-            <ul>
-              <li>
-                <label>
-                  <input class='visually-hidden' type='radio' name='fatness' value='0'><span>0%</span>
-                </label>
-              </li>
-              <li>
-                <label>
-                  <input class='visually-hidden' type='radio' name='fatness' value='10' checked><span>до 10%</span>
-                </label>
-              </li>
-              <li>
-                <label>
-                  <input class='visually-hidden' type='radio' name='fatness' value='30'><span>до 30%</span>
-                </label>
-              </li>
-              <li>
-                <label>
-                  <input class='visually-hidden' type='radio' name='fatness' value='>30'><span>выше 30%</span>
-                </label>
-              </li>
-            </ul>
-            <span>Наполнители:</span>
-            <ul>
-              <li>
-                <label for='chocolate'>
-                  <input class='visually-hidden' type='checkbox' name='chocolate-fillers' id='chocolate' checked>шоколадные
-                </label>
-              </li>
-              <li>
-                <label for='sugar'>
-                  <input class='visually-hidden' type='checkbox' name='sugar-fillers' id='sugar' checked>сахарные присыпки
-                </label>
-              </li>
-              <li>
-                <label>
-                  <input class='visually-hidden' type='checkbox' name='fruit-fillers' id='fruit'>фрукты
-                </label>
-              </li>
-              <li>
-                <label for='syrup'>
-                  <input class='visually-hidden' type='checkbox' name='syrup-fillers' id='syrup'>сироп
-                </label>
-              </li>
-              <li>
-                <label for='jam'>
-                  <input class='visually-hidden' type='checkbox' name='jam-fillers' id='jam'>джем
-                </label>
-              </li>
-            </ul>
-            <p>
-              <button class='button' type='submit'>Применить</button>
-            </p>
-          </fieldset>
-        </form>
-      </div>
+      <form class='options' action='#' method='get'>
+        <fieldset>
+          <legend class='visually-hidden'>Критерии поиска</legend>
+          <p>
+            <label for='sorting'>Соритровка:</label>
+            <select class='visually-hidden' name='sorting-type'>
+              <option value='popularity'>по-популярности</option>
+              <option value='inexpensive-first'>сначала недорогие</option>
+              <option value='expensive-first'>сначала дорогие</option>
+              <option value='fat-content'>по жирности</option>
+            </select>
+          </p>
+          <p>
+            <label for='price'>Цена: 100 руб. - 500 руб.</label>
+            <input class='visually-hidden' type='range' min='100' max='500' step='10' name='price' id='price'>
+          </p>
+          <span>Жирность:</span>
+          <ul>
+            <li>
+              <label>
+                <input class='visually-hidden' type='radio' name='fatness' value='0'><span>0%</span>
+              </label>
+            </li>
+            <li>
+              <label>
+                <input class='visually-hidden' type='radio' name='fatness' value='10' checked><span>до 10%</span>
+              </label>
+            </li>
+            <li>
+              <label>
+                <input class='visually-hidden' type='radio' name='fatness' value='30'><span>до 30%</span>
+              </label>
+            </li>
+            <li>
+              <label>
+                <input class='visually-hidden' type='radio' name='fatness' value='>30'><span>выше 30%</span>
+              </label>
+            </li>
+          </ul>
+          <span>Наполнители:</span>
+          <ul>
+            <li>
+              <label for='chocolate'>
+                <input class='visually-hidden' type='checkbox' name='chocolate-fillers' id='chocolate' checked>шоколадные
+              </label>
+            </li>
+            <li>
+              <label for='sugar'>
+                <input class='visually-hidden' type='checkbox' name='sugar-fillers' id='sugar' checked>сахарные присыпки
+              </label>
+            </li>
+            <li>
+              <label>
+                <input class='visually-hidden' type='checkbox' name='fruit-fillers' id='fruit'>фрукты
+              </label>
+            </li>
+            <li>
+              <label for='syrup'>
+                <input class='visually-hidden' type='checkbox' name='syrup-fillers' id='syrup'>сироп
+              </label>
+            </li>
+            <li>
+              <label for='jam'>
+                <input class='visually-hidden' type='checkbox' name='jam-fillers' id='jam'>джем
+              </label>
+            </li>
+          </ul>
+          <p>
+            <button class='button' type='submit'>Применить</button>
+          </p>
+        </fieldset>
+      </form>
       <ul class='product-icecream'>
         <li>
-          <a href='#' class='icecream'> <!--Ширина и высота изображений задана предварительно-->
+          <a href='#' class='icecream'>
             <img src='img/product-01.jpg' width='267' height='267' alt='Сливочное с апельсиновым джемом и цитрусовой стружкой'>
             <p class='icecream-price'>310₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочное с апельсиновым джемом и цитрусовой стружкой</h2>
           </a>
-          <a href='#' class='button'>Быстрый просмотр</a>
+          <button type='button' class='button'>Быстрый просмотр</button>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -204,7 +196,7 @@
             <p class='icecream-price'>380₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочно-кофейное с кусочками шоколада</h2>
           </a>
-          <a href='#' class='button'>Быстрый просмотр</a>
+          <button type='button' class='button'>Быстрый просмотр</button>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -212,7 +204,7 @@
             <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочно-клубничное с присыпкой из белого шоколада</h2>
           </a>
-          <a href='#' class='button'>Быстрый просмотр</a>
+          <button type='button' class='button'>Быстрый просмотр</button>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -220,7 +212,7 @@
             <p class='icecream-price'>415₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочное крем-брюле с карамальной подливкой</h2>
           </a>
-          <a href='#' class='button'>Быстрый просмотр</a>
+          <button type='button' class='button'>Быстрый просмотр</button>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -228,7 +220,7 @@
             <p class='icecream-price'>325₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочное с брусничным джемом</h2>
           </a>
-          <a href='#' class='button'>Быстрый просмотр</a>
+          <button type='button' class='button'>Быстрый просмотр</button>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -236,7 +228,7 @@
             <p class='icecream-price'>410₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочно-черничное с цельными ягодами черники</h2>
           </a>
-          <a href='#' class='button'>Быстрый просмотр</a>
+          <button type='button' class='button'>Быстрый просмотр</button>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -244,7 +236,7 @@
             <p class='icecream-price'>375₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочно-лимонное с карамельной присыпкой</h2>
           </a>
-          <a href='#' class='button'>Быстрый просмотр</a>
+          <button type='button' class='button'>Быстрый просмотр</button>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -252,7 +244,7 @@
             <p class='icecream-price'>320₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочное c шоколадной стружкой</h2>
           </a>
-          <a href='#' class='button'>Быстрый просмотр</a>
+          <button type='button' class='button'>Быстрый просмотр</button>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -260,7 +252,7 @@
             <p class='icecream-price'>440₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочно-ванильное с кусочками шоколада</h2>
           </a>
-          <a href='#' class='button'>Быстрый просмотр</a>
+          <button type='button' class='button'>Быстрый просмотр</button>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -268,7 +260,7 @@
             <p class='icecream-price'>435₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочное c ментоловым сиропом</h2>
           </a>
-          <a href='#' class='button'>Быстрый просмотр</a>
+          <button type='button' class='button'>Быстрый просмотр</button>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -276,7 +268,7 @@
             <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочное с кусочками черного шоколада</h2>
           </a>
-          <a href='#' class='button'>Быстрый просмотр</a>
+          <button type='button' class='button'>Быстрый просмотр</button>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -284,12 +276,12 @@
             <p class='icecream-price'>420₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочное с мятным сиропом</h2>
           </a>
-          <a href='#' class='button'>Быстрый просмотр</a>
+          <button type='button' class='button'>Быстрый просмотр</button>
         </li>
       </ul>
       <ul class='pagination'>
         <li>
-          <a href='' class="next"><span aria-hidden='true'>&laquo;</span></a>
+          <a href='' class='back'><span aria-hidden='true'>&laquo;</span></a>
         </li>
         <li><a href='catalog.html'>1</a></li>
         <li><a href='catalog2.html'>2</a></li>
@@ -297,7 +289,7 @@
         <li><a href='catalog4.html'>4</a></li>
         <li><a href='catalog5.html'>5</a></li>
         <li>
-          <a href='' class="next"><span aria-hidden='true'>&raquo;</span></a>
+          <a href='' class='next'><span aria-hidden='true'>&raquo;</span></a>
         </li>
       </ul>
     </main>
@@ -318,7 +310,7 @@
           <a href='htmlacademy.ru'>
             <img src='img/logo-htmlacademy.svg' width='108' height="39" alt='Логотип HTML academy'>
           </a>
-          <p>Сделано в <a href='htmlacademy.ru'>HTML Academy</a> © 2017</p><!--В макете указан 2017-ый ¯\_(ツ)_/¯-->
+          <p>Сделано в <a href='htmlacademy.ru'>HTML Academy</a> © 2017</p>
         </div>
     </footer>
   </body>
