--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class='user-navigation'>
           <ul class='search-list'>
             <li>
-              <span class='search-logo'>Поиск</span>
+              <span class='search-logo'></span>
               <form class='seacrh-form' action='https://echo.htmlacademy.ru' method='get'>
                 <ul class='search-window'>
                   <li>
@@ -43,14 +43,14 @@
                 <ul class='login-window'>
                   <li class='login-field'>
                     <label class='visually-hidden' for='user-email'>Электронная почта</label>
-                    <input type='email' name='email' id='user-email' placeholder='Электронная почта' required>
+                    <input type='email' name='email' id='user-email' placeholder='Электронная почта'>
                   </li>
                   <li class='login-field'>
                     <label class='visually-hidden' for='user-password'>Пароль</label>
-                    <input type='password' name='password' id='user-password' placeholder='Пароль' required>
+                    <input type='password' name='password' id='user-password' placeholder='Пароль'>
                   </li>
-                  <li class='sign-in'>
-                    <button class='button' type='submit'>Войти</button>
+                  <li>
+                    <button class='button sign-in' type='submit'>Войти</button>
                   </li>
                   <li class='login-password-info'>
                     <a class='login-problem' href='#'>Забыли пароль?</a>
@@ -62,7 +62,7 @@
               </form>
             </li>
           </ul>
-          <ul class='backet-list'>
+          <ul class='basket-list'>
             <li>
               <span class='basket'>Пусто</span>
             </li>
