--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
       </div>
       <section class='first-offers'>
         <h2 class='offers-caption'>Малинка даром!</h2>
-        <p>При покупке 2кг любого фруктового мороженого, добавим
+        <p class='offers'>При покупке 2кг любого фруктового мороженого, добавим
            в ваш заказ банку малинового варенья бесплатно.</p>
-        <a href='#' class='button'>Хочу варенье!</a>
+        <a href='#' class='button offers-btn'>Хочу варенье!</a>
       </section>
       <section class='second-offers'>
         <h2 class='offers-caption'>Шоколадки даром!</h2>
         <p>При покупке 2кг пломбира, добавим в ваш заказ упаковку
             вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-        <a href='#' class='button'>Хочу шоколадки!</a>
+        <a href='#' class='button offers-btn'>Хочу шоколадки!</a>
       </section>
       <ul class='product-icecream'>
         <li>
