--- a/index.html
+++ b/index.html
@@ -204,18 +204,18 @@
       </div>
     </main>
     <footer class='main-footer'>
-        <ul class='social-list'>
-          <li><a class='social-button twitter' href='#'>Твиттер</a></li>
-          <li><a class='social-button instagram' href='#'>Инстаграм</a></li>
-          <li><a class='social-button facebook' href='#'>Фэйсбук</a></li>
-          <li><a class='social-button vk' href='#'>Вконтаке</a></li>
-        </ul>
-        <ul class='additional-list'>
-          <li><a class='for-providers' href='#'>Для поставщиков</a></li>
-          <li><a class='about-production' href='#'>О производсвте</a></li>
-          <li><a class='documents' href='#'>Наши документы</a></li>
-          <li><a class='standards' href='#'>Экологические стандарты</a></li>
-        </ul>
+      <ul class='social-list'>
+        <li><a class='social-button twitter' href='#' aria-label='Твиттер'></a></li>
+        <li><a class='social-button instagram' href='#' aria-label='Инстаграм'></a></li>
+        <li><a class='social-button facebook' href='#' aria-label='Фэйсбук'></a></li>
+        <li><a class='social-button vk' href='#' aria-label='В контакте'></a></li>
+      </ul>
+      <ul class='additional-list'>
+        <li><a class='for-providers' href='#'>Для поставщиков</a></li>
+        <li><a class='about-production' href='#'>О производсвте</a></li>
+        <li><a class='documents' href='#'>Наши документы</a></li>
+        <li><a class='standards' href='#'>Экологические стандарты</a></li>
+      </ul>
       <div class='footer-copyright'>
         <a href='htmlacademy.ru'>
           <img src='img/logo-htmlacademy.svg' width='108' height="39" alt='Логотип HTML academy'>
