--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
           <img src='img/logo.svg' width='154' height='64' alt='Логотип GllacyShop'>
         </a>
         <ul class='site-navigation'>
-          <li><a href='#'>Каталог</a>
+          <li><a href='#' class='active'>Каталог</a>
             <ul class='catalog-navigation'>
               <li><a href='#'>Новинки</a></li>
               <li><a href='catalog.html'>Сливочное</a></li>
@@ -51,8 +51,8 @@
                     <label class='visually-hidden' for='user-password'>Пароль</label>
                     <input type='password' name='password' id='user-password' placeholder='Пароль' required>
                   </li>
-                  <li class='sign-in'>
-                    <button class='button' type='submit'>Войти</button>
+                  <li>
+                    <button class='button sign-in' type='submit'>Войти</button>
                   </li>
                   <li class='login-password-info'>
                     <a class='login-problem' href='#'>Забыли пароль?</a>
@@ -74,21 +74,21 @@
                       <td><button type='button' class='visually-hidden delete'>x</button></td>
                       <td><img src='img/product-01.jpg' width='33' height='33' alt='Пломбир с апельсиновым джемом'></td>
                       <td>Пломбир с апельсиновым джемом</td>
-                      <td>1,5 кг х <span class='backet-price'>200 руб.</span></td>
+                      <td>1,5 кг х <span class='basket-price'>200 руб.</span></td>
                       <td>300 руб.</td>
                     </tr>
                     <tr>
                       <td><button type='button' class='visually-hidden delete'>x</button></td>
                       <td><img src='img/product-03.jpg' width='33' height='33' alt='Клубничный пломбир с присыпкой из белого шоколада'></td>
                       <td>Клубничный пломбир с присыпкой из белого шоколада</td>
-                      <td>3,0 кг х <span class='backet-price'>300 руб.</span></td>
+                      <td>3,0 кг х <span class='basket-price'>300 руб.</span></td>
                       <td>450 руб.</td>
                     </tr>
                     <tr>
-                      <td colspan='5'><hr>Итого 750 руб.</td>
+                      <td colspan='5' class='basket-sum'><hr>Итого: 750 руб.</td>
                     </tr>
                   </table>
-                  <a href='#' class='button'>Оформить заказ</a>
+                  <a href='#' class='button checkout-btn'>Оформить заказ</a>
                 </li>
               </ul>
             </li>
@@ -115,8 +115,8 @@
         <fieldset>
           <legend class='visually-hidden'>Критерии поиска</legend>
           <p>
-            <label for='sorting'>Соритровка:</label>
-            <select class='visually-hidden' name='sorting-type'>
+            <label for='sorting' class='option-caption'>Соритровка:</label>
+            <select class='sorting-type' name='sorting-type'>
               <option value='popularity'>по-популярности</option>
               <option value='inexpensive-first'>сначала недорогие</option>
               <option value='expensive-first'>сначала дорогие</option>
@@ -124,62 +124,62 @@
             </select>
           </p>
           <p>
-            <label for='price'>Цена: 100 руб. - 500 руб.</label>
-            <input class='visually-hidden' type='range' min='100' max='500' step='10' name='price' id='price'>
+            <label for='price' class='option-caption'>Цена: 100 руб. - 500 руб.</label>
+            <input class='' type='range' min='100' max='500' step='10' name='price' id='price'>
           </p>
-          <span>Жирность:</span>
+          <span class='option-caption'>Жирность:</span>
           <ul class='fatness-list'>
             <li>
               <label>
-                <input class='visually-hidden' type='radio' name='fatness' value='0'><span>0%</span>
+                <input class='' type='radio' name='fatness' value='0'><span>0%</span>
               </label>
             </li>
             <li>
               <label>
-                <input class='visually-hidden' type='radio' name='fatness' value='10' checked><span>до 10%</span>
+                <input class='' type='radio' name='fatness' value='10' checked><span>до 10%</span>
               </label>
             </li>
             <li>
               <label>
-                <input class='visually-hidden' type='radio' name='fatness' value='30'><span>до 30%</span>
+                <input class='' type='radio' name='fatness' value='30'><span>до 30%</span>
               </label>
             </li>
             <li>
               <label>
-                <input class='visually-hidden' type='radio' name='fatness' value='>30'><span>выше 30%</span>
+                <input class='' type='radio' name='fatness' value='>30'><span>выше 30%</span>
               </label>
             </li>
           </ul>
-          <span>Наполнители:</span>
+          <span class='option-caption'>Наполнители:</span>
           <ul class='add-list'>
             <li>
               <label for='chocolate'>
-                <input class='visually-hidden' type='checkbox' name='chocolate-fillers' id='chocolate' checked>шоколадные
+                <input class='' type='checkbox' name='chocolate-fillers' id='chocolate' checked>шоколадные
               </label>
             </li>
             <li>
               <label for='sugar'>
-                <input class='visually-hidden' type='checkbox' name='sugar-fillers' id='sugar' checked>сахарные присыпки
+                <input class='' type='checkbox' name='sugar-fillers' id='sugar' checked>сахарные присыпки
               </label>
             </li>
             <li>
               <label>
-                <input class='visually-hidden' type='checkbox' name='fruit-fillers' id='fruit'>фрукты
+                <input class='' type='checkbox' name='fruit-fillers' id='fruit'>фрукты
               </label>
             </li>
             <li>
               <label for='syrup'>
-                <input class='visually-hidden' type='checkbox' name='syrup-fillers' id='syrup'>сироп
+                <input class='' type='checkbox' name='syrup-fillers' id='syrup'>сироп
               </label>
             </li>
             <li>
               <label for='jam'>
-                <input class='visually-hidden' type='checkbox' name='jam-fillers' id='jam'>джем
+                <input class='' type='checkbox' name='jam-fillers' id='jam'>джем
               </label>
             </li>
           </ul>
           <p>
-            <button class='button' type='submit'>Применить</button>
+            <button class='apply-btn' type='submit'>Применить</button>
           </p>
         </fieldset>
       </form>
