--- a/index.html
+++ b/index.html
@@ -1,72 +1,56 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang='ru'>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <title>HTML Academy: Глейси</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic' rel='stylesheet'>
+    <link href='css/style.css' rel='stylesheet'>
   </head>
   <body>
     <header class='main-header'>
       <nav class='main-navigation'>
         <img src='img/logo.svg' width='154' height='64' alt='Логотип GllacyShop'>
         <ul class='site-navigation'>
-          <li><a href='#'>Каталог</a>
+          <li><a href='#' class='link'>Каталог</a>
             <ul class='catalog-navigation'>
-              <li><a href='#'>Новинки</a></li>
-              <li><a href='catalog.html'>Сливочное</a></li>
-              <li><a href='#'>Щербеты</a></li>
-              <li><a href='#'>Фруктовый лед</a></li>
-              <li><a href='#'>Мелорин</a></li>
+              <li><a href='#' class='link'>Новинки</a></li>
+              <li><a href='catalog.html' class='link'>Сливочное</a></li>
+              <li><a href='#' class='link'>Щербеты</a></li>
+              <li><a href='#' class='link'>Фруктовый лед</a></li>
+              <li><a href='#' class='link'>Мелорин</a></li>
             </ul>
           </li>
-          <li><a href='delivery-and-payment.html'>Доставка и оплата</a></li>
-          <li><a href='about-company.html'>О Компании</a></li>
+          <li><a href='delivery-and-payment.html' class='link'>Доставка и оплата</a></li>
+          <li><a href='about-company.html' class='link'>О Компании</a></li>
         </ul>
         <div class='user-navigation'>
-          <ul class='search-list'>
-            <li>
-              <span class='search-logo'></span>
-              <form class='seacrh-form' action='https://echo.htmlacademy.ru' method='get'>
-                <ul class='search-window'>
-                  <li>
-                    <input type='search' name='search' placeholder='Что ищем?'>
-                  </li>
-                </ul>
-              </form>
-            </li>
-          </ul>
-          <ul class='login-list'>
-            <li>
-              <a href='#' class='login-link'>Вход</a>
-              <form class='login-form' action='https://echo.htmlacademy.ru' method='post'>
-                <ul class='login-window'>
-                  <li class='login-field'>
-                    <label class='visually-hidden' for='user-email'>Электронная почта</label>
-                    <input type='email' name='email' id='user-email' placeholder='Электронная почта'>
-                  </li>
-                  <li class='login-field'>
-                    <label class='visually-hidden' for='user-password'>Пароль</label>
-                    <input type='password' name='password' id='user-password' placeholder='Пароль'>
-                  </li>
-                  <li>
-                    <button class='button sign-in' type='submit'>Войти</button>
-                  </li>
-                  <li class='login-password-info'>
-                    <a class='login-problem' href='#'>Забыли пароль?</a>
-                  </li>
-                  <li class='login-password-info'>
-                    <a class='login-problem' href='#'>Новая регистрация</a>
-                  </li>
-                </ul>
-              </form>
-            </li>
-          </ul>
-          <ul class='basket-list'>
-            <li>
-              <span class='basket'>Пусто</span>
-            </li>
-          </ul>
+          <span class='search-logo'></span>
+          <form class='search-form' action='https://echo.htmlacademy.ru' method='get'>
+            <input type='search' class='search-field' name='search' placeholder='Что ищем?'>
+          </form>
+          <a href='#' class='login-link link'>Вход</a>
+          <form class='login-form' action='https://echo.htmlacademy.ru' method='post'>
+            <ul class='login-window'>
+              <li class='login-field'>
+                <label class='visually-hidden' for='user-email'>Электронная почта</label>
+                <input type='email' name='email' id='user-email' placeholder='Электронная почта'>
+              </li>
+              <li class='login-field'>
+                <label class='visually-hidden' for='user-password'>Пароль</label>
+                <input type='password' name='password' id='user-password' placeholder='Пароль'>
+              </li>
+              <li>
+                <button class='button sign-in' type='submit'>Войти</button>
+              </li>
+              <li class='login-password-info'>
+                <a class='login-problem link' href='#'>Забыли пароль?</a>
+              </li>
+              <li class='login-password-info'>
+                <a class='login-problem link' href='#'>Новая регистрация</a>
+              </li>
+            </ul>
+          </form>
+          <span class='basket'>Пусто</span>
         </div>
       </nav>
       <div class='contact-information-top'>
@@ -88,33 +72,34 @@
         <div class='slider-top' id='first-slide'>
           <p>Крем-брюле и пломбир с малиновым джемом</p>
           <img src='img/icecream-slide1.png' height='881' width='1045' alt='Крем-брюле и пломбир с малиновым джемом'>
-          <a href='#' class='button'>Давайте оба!</a>
+          <a href='#' class='button link'>Давайте оба!</a>
+        </div>
         <div class='slider-top' id='second-slide'>
           <p>Шоколадный пломбир и лимонный сорбет</p>
           <img src='img/icecream-slide2.png' height='859' width='1065' alt='Шоколадный пломбир и лимонный сорбет'>
-          <a href='#' class='button'>Давайте оба!</a>
+          <a href='#' class='button link'>Давайте оба!</a>
         </div>
         <div class='slider-top' id='thrid-slide'>
           <p>Пломбир с помадкой и клубничный щербет</p>
           <img src='img/icecream-slide3.png' height='854' width='1079' alt='Пломбир с помадкой и клубничный щербет'>
-          <a href='#' class='button'>Давайте оба!</a>
+          <a href='#' class='button link'>Давайте оба!</a>
         </div>
       </div>
       <section class='first-offers'>
         <h2 class='offers-caption'>Малинка даром!</h2>
         <p class='offers'>При покупке 2кг любого фруктового мороженого, добавим
            в ваш заказ банку малинового варенья бесплатно.</p>
-        <a href='#' class='button offers-btn'>Хочу варенье!</a>
+        <a href='#' class='button offers-btn link'>Хочу варенье!</a>
       </section>
       <section class='second-offers'>
         <h2 class='offers-caption'>Шоколадки даром!</h2>
         <p>При покупке 2кг пломбира, добавим в ваш заказ упаковку
             вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-        <a href='#' class='button offers-btn'>Хочу шоколадки!</a>
+        <a href='#' class='button offers-btn link'>Хочу шоколадки!</a>
       </section>
       <ul class='product-icecream'>
         <li>
-          <a href='#' class='icecream'> <!--Ширина и высота изображений задана предварительно-->
+          <a href='#' class='icecream link'> <!--Ширина и высота изображений задана предварительно-->
             <img src='img/product-01.jpg' width='267' height='267' alt='Сливочное с апельсиновым джемом и цитрусовой стружкой'>
             <p class='icecream-price'>310₽<span class='icecream-kilo'>/кг</span></p>
             <h3 class='icecream-name'>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
@@ -122,7 +107,7 @@
           <button type='button' class='button' href='#'>Быстрый просмотр</button>
         </li>
         <li>
-          <a href='#' class='icecream'>
+          <a href='#' class='icecream link'>
             <img src='img/product-02.jpg' width='267' height='267' alt='Сливочно-кофейное с кусочками шоколада'>
             <p class='icecream-price'>380₽<span class='icecream-kilo'>/кг</span></p>
             <h3 class='icecream-name'>Сливочно-кофейное с кусочками шоколада</h3>
@@ -130,7 +115,7 @@
           <button type='button' class='button'>Быстрый просмотр</button>
         </li>
         <li>
-          <a href='#' class='icecream'>
+          <a href='#' class='icecream link'>
             <img src='img/product-03.jpg' width='267' height='267' alt='Сливочно-клубничное с присыпкой из белого шоколада'>
             <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
             <h3 class='icecream-name'>Сливочно-клубничное с присыпкой из белого шоколада</h3>
@@ -138,7 +123,7 @@
           <button type='button' class='button'>Быстрый просмотр</button>
         </li>
         <li>
-          <a href='#' class='icecream'>
+          <a href='#' class='icecream link'>
             <img src='img/product-04.jpg' width='267' height='267' alt='Сливочное крем-брюле с карамальной подливкой'>
             <p class='icecream-price'>415₽<span class='icecream-kilo'>/кг</span></p>
             <h3 class='icecream-name'>Сливочное крем-брюле с карамальной подливкой</h3>
@@ -175,7 +160,7 @@
       </article>
       <article class='blog'>
         <h3 class='blog-caption'>Новое в нашем блоге</h3>
-        <a href='#' class='blog-name'>
+        <a href='#' class='blog-name link'>
           10 способов сервировки фруктовых щербетов к столу
         </a>
       </article>
@@ -195,36 +180,36 @@
       <div class='contact-information'>
         <p>Адрес главного офиса
            и офлайн магазина:</p>
-        <p class='adress'>ул. Большая Конюшенная
+        <p class='address'>ул. Большая Конюшенная
             19/8, Санкт-Петербург</p>
         <p>Для заказов по телефону:</p>
-        <p class='adress'> 8 812 450-25-25</p>
+        <p class='address'> 8 812 450-25-25</p>
         <p>(c 10 до 20 ежедневно)</p>
         <button type='button' class='button'>Форма обратной связи</button>
       </div>
     </main>
     <footer class='main-footer'>
       <ul class='social-list'>
-        <li><a class='social-button twitter' href='#' aria-label='Твиттер'></a></li>
-        <li><a class='social-button instagram' href='#' aria-label='Инстаграм'></a></li>
-        <li><a class='social-button facebook' href='#' aria-label='Фэйсбук'></a></li>
-        <li><a class='social-button vk' href='#' aria-label='В контакте'></a></li>
+        <li><a class='social-button twitter link' href='#' aria-label='Твиттер'></a></li>
+        <li><a class='social-button instagram link' href='#' aria-label='Инстаграм'></a></li>
+        <li><a class='social-button facebook link' href='#' aria-label='Фэйсбук'></a></li>
+        <li><a class='social-button vk link' href='#' aria-label='В контакте'></a></li>
       </ul>
       <ul class='additional-list'>
-        <li><a class='for-providers' href='#'>Для поставщиков</a></li>
-        <li><a class='about-production' href='#'>О производсвте</a></li>
-        <li><a class='documents' href='#'>Наши документы</a></li>
-        <li><a class='standards' href='#'>Экологические стандарты</a></li>
+        <li><a class='for-providers link' href='#'>Для поставщиков</a></li>
+        <li><a class='about-production link' href='#'>О производсвте</a></li>
+        <li><a class='documents link' href='#'>Наши документы</a></li>
+        <li><a class='standards link' href='#'>Экологические стандарты</a></li>
       </ul>
       <div class='footer-copyright'>
-        <a href='htmlacademy.ru'>
-          <img src='img/logo-htmlacademy.svg' width='108' height="39" alt='Логотип HTML academy'>
+        <a href='htmlacademy.ru' class='link'>
+          <img src='img/logo-htmlacademy.svg' width='108' height='39' alt='Логотип HTML academy'>
         </a>
-        <p>Сделано в <a href='htmlacademy.ru'>HTML Academy</a> © 2017</p>
+        <p>Сделано в <a href='htmlacademy.ru' class='link'>HTML Academy</a> © 2017</p>
       </div>
     </footer>
     <div class='feedback-window'>
-      <form action='#' method="post">
+      <form action='#' method='post'>
         <fieldset>
           <legend class='visually-hidden'>Форма обратной связи</legend>
           <b>Мы обязательно вам ответим!</b>
